Adicionando suporte ao banco H2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=api-produto
+
+# Nome do banco de dados em memória
+# spring.datasource.url=jdbc:h2:mem:produtos_db
+# Nome do banco de dados em arquivo
+spring.datasource.url=jdbc:h2:file:./produtos_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.platform=h2
+# Habilita o console do H2
+spring.h2.console.enabled=true
+# Caminho do console
+spring.h2.console.path=/h2-console
+# Atualiza o schema automaticamente (create, none)
+spring.jpa.hibernate.ddl-auto=update
+# Exibe SQL gerado
+spring.jpa.show-sql=true
